Prevent table layout from breaking when view is narrow (white-space: nowrap;)

--- a/Solita.LanguageEditor.UI/static/css/languageeditor.css
+++ b/Solita.LanguageEditor.UI/static/css/languageeditor.css
@@ -4,6 +4,7 @@
 
     .language-editor td {
         padding: 0 5px;
+        white-space: nowrap;
     }
 
     .language-editor th {
